--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "natours",
   "version": "1.0.0",
   "description": "Learning node, express and mongoDB",
-"main": "app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "start:prod": "set NODE_ENV=production && nodemon server.js",
-	"debug":"ndb server.js"
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "Abdul Mannan Khan",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
   },
